--- a/gallery.html
+++ b/gallery.html
@@ -26,12 +26,8 @@
     </nav>
 
 <main>
-    <h1 id="page-header">Contact Us</h1>
-    <h3>Reach Out To Club Officals</h3>
-    <p>To connect with a club representative email: @urec.mensvolleyballclub@ttu.edu</p>
-    <h3>Find Us On Youtube & Instagram</h3>
-    <p>@texastechmensclubvolleyball</p>
-    <p>https://www.facebook.com/profile.php?id=100063585411009&mibextid=LQQJ4d</p>
+    <h1 id="page-header">Gallery</h1>
+    
 
 
 
