--- a/index.html
+++ b/index.html
@@ -14,8 +14,14 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="tryouts.html">Tryouts</a></li>
             <li><a href="schedules.html">Schedules</a></li>
-            <li><a href="contact.html">Contact</a></li>
-            <li><a href="support.html">Donate</a></li>
+            <li><a href="about.html">About Us</a></li>
+            <li><a href="">More</a>
+                <ul class="dropdown">
+                    <li><a href="support.html">Donate</a></li>
+                    <li><a href="gallery.html">Gallery</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </li>
         </ul>
     </nav>
 
@@ -56,19 +62,21 @@
         </div>
     </div>
 
-    <h3>News and Updates</h3>
-    <section class="bulletin">
-        <p>No Upcoming Events</p>
-        <a href="https://events.ttu.edu/" target="_blank" class="bulletin-link">Discover More Events</a>
-    </section>
-
-    <div class="roster-heading">
-        <h5 id="roster-updates">Offical Roster Updates</h5>
-        <span class="roster-date">1/31/2025</span>
-    </div>
-    <div class="roster-container">
-        <img src="a-team-roster.jpg" class="a-team" alt="A Team Roster">
-        <img src="b-team-roster.jpg" class="b-team" alt="B Team Roster">
+    <h3 id="News-heading">News and Updates</h3>
+    <div class="news-section">
+        <section class="bulletin">
+            <p>No Upcoming Events</p>
+            <a href="https://events.ttu.edu/" target="_blank" class="bulletin-link">Discover More Events</a>
+        </section>
+    
+        <div class="roster-heading">
+            <h5 id="roster-updates">Offical Roster Updates</h5>
+            <span class="roster-date">1/31/2025</span>
+        </div>
+        <div class="roster-container">
+            <img src="a-team-roster.jpg" class="roster-image" alt="A Team Roster">
+            <img src="b-team-roster.jpg" class="roster-image" alt="B Team Roster">
+        </div>
     </div>
 
     <h3 id="info">General Information</h3>
