--- a/schedules.html
+++ b/schedules.html
@@ -14,8 +14,14 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="tryouts.html">Tryouts</a></li>
             <li><a href="schedules.html">Schedules</a></li>
-            <li><a href="contact.html">Contact</a></li>
-            <li><a href="support.html">Donate</a></li>
+            <li><a href="about.html">About Us</a></li>
+            <li><a href="">More</a>
+                <ul class="dropdown">
+                    <li><a href="support.html">Donate</a></li>
+                    <li><a href="gallery.html">Gallery</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </li>
         </ul>
     </nav>
 
