--- a/about.html
+++ b/about.html
@@ -26,12 +26,15 @@
     </nav>
 
 <main>
-    <h1 id="page-header">Contact Us</h1>
-    <h3>Reach Out To Club Officals</h3>
-    <p>To connect with a club representative email: @urec.mensvolleyballclub@ttu.edu</p>
-    <h3>Find Us On Youtube & Instagram</h3>
-    <p>@texastechmensclubvolleyball</p>
+    <h1 id="page-header">About Us</h1>
+    <h3>Our Story</h3>
+    <p>story/about us........ Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis eius voluptas voluptatem minus mollitia quaerat cupiditate vel id sed consequuntur. Dolore ratione molestiae quo? Alias recusandae quae fugit earum quam?</p>
+    <h3>Connect With Us On Social Media</h3> 
+    <p>Instgram and Facebook</p>
     <p>https://www.facebook.com/profile.php?id=100063585411009&mibextid=LQQJ4d</p>
+    <h3>Watch Us On Youtube</h3>
+    <p>@texastechmensclubvolleyball</p>
+   
 
 
 
