--- a/tryouts.html
+++ b/tryouts.html
@@ -14,8 +14,14 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="tryouts.html">Tryouts</a></li>
             <li><a href="schedules.html">Schedules</a></li>
-            <li><a href="contact.html">Contact</a></li>
-            <li><a href="support.html">Donate</a></li>
+            <li><a href="about.html">About Us</a></li>
+            <li><a href="">More</a>
+                <ul class="dropdown">
+                    <li><a href="support.html">Donate</a></li>
+                    <li><a href="gallery.html">Gallery</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </li>
         </ul>
     </nav>
 
@@ -36,36 +42,38 @@
     </section>
 
     <h3>Requirments</h3>
+    <div class="requirements-container">
     <h5>Players must have the following requirements to participate in club tryouts:</h5>
-    <div class="requirement-boxes">
-        <div class="requirement-card">
-            <img src="shoe-clipart.PNG" alt="Athletic Shoes">
-            <p>Athletic Shoes (recommend basketball shoes or Asics)</p>
+        <div class="requirement-boxes">
+            <div class="requirement-card">
+                <img src="shoe-clipart.PNG" alt="Athletic Shoes">
+                <p>Athletic Shoes (recommend basketball shoes or Asics)</p>
+            </div>
+            <div class="requirement-card">
+                <img src="waiver-clipart.PNG" alt="Waiver">
+            <a href="" class="requirement-link">Signed Waiver Form</a>
+            </div>
+            <div class="requirement-card">
+                <img src="money-clipart.PNG" alt="$5 Tryout Fee">
+                <p>5$ Tryout Fee</p>
+            </div>
         </div>
-        <div class="requirement-card">
-            <img src="waiver-clipart.PNG" alt="Waiver">
-         <a href="" class="requirement-link">Signed Waiver Form</a>
+        <h5>Recommended items for tryouts include:</h5>
+        <div class="requirement-boxes">
+            <div class="requirement-card">
+                <img src="water-clipart.PNG" alt="Water">
+                <p>Bring Water (limited fountains near court)</p>
+            </div>
+            <div class="requirement-card">
+                <img src="watch-clipart.PNG" alt="Remove Jewelry">
+                <p>Remove Jewelry or Watches</p>
+            </div>
+            <div class="requirement-card">
+                <img src="stretch-clipart.PNG" alt="Stretching">
+                <p>Stretch before & after playing</p>
+            </div>
         </div>
-        <div class="requirement-card">
-            <img src="money-clipart.PNG" alt="$5 Tryout Fee">
-            <p>5$ Tryout Fee</p>
-        </div>
-    </div>
-    <h5>Recommended items for tryouts include:</h5>
-    <div class="requirement-boxes">
-        <div class="requirement-card">
-            <img src="water-clipart.PNG" alt="Water">
-            <p>Bring Water (limited fountains near court)</p>
-        </div>
-        <div class="requirement-card">
-            <img src="watch-clipart.PNG" alt="Remove Jewelry">
-            <p>Remove Jewelry or Watches</p>
-        </div>
-        <div class="requirement-card">
-            <img src="stretch-clipart.PNG" alt="Stretching">
-            <p>Stretch before & after playing</p>
-        </div>
-    </div>
+    </div>    
 
     <h3 id="Outlook">Details & Outline</h3>
     <section class="tryout-dates-container">
