--- a/about.html
+++ b/about.html
@@ -27,17 +27,36 @@
 
 <main>
     <h1 id="page-header">About Us</h1>
+
+    <div class="Ateam-banner">
+        <img src="a-team-group.png" class="group-A-pic" alt="A Team group photo">
+    </div>
+
     <h3>Our Story</h3>
-    <p>story/about us........ Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis eius voluptas voluptatem minus mollitia quaerat cupiditate vel id sed consequuntur. Dolore ratione molestiae quo? Alias recusandae quae fugit earum quam?</p>
-    <h3>Connect With Us On Social Media</h3> 
-    <p>Instgram and Facebook</p>
-    <p>https://www.facebook.com/profile.php?id=100063585411009&mibextid=LQQJ4d</p>
+    <p class="story-text">The Texas Tech Men's Volleyball Club is a student organization that operaters through the University Recreation Sport Clubs Program. 
+        Our purpose is to motivate and teach the game of volleyball. While doing so, we keep a competitive mindset with the intentions of improving every member and working as a team.<br><br><br>
+        The goal of the TTU Men's Volleyball Club is to grow the game of volleyball.
+        The team is always open to new members wanting to sharpen their skills, play a competitive sport, or learn the basics!</p>   
+    
+        <div class="Bteam-banner">
+        <img src="b-team-group.png" class="group-B-pic" alt="B Team group photo">
+    </div>
+
+    <h3>Connect With Us On Social Media</h3>
+    <div class="social-media-section">
+        <a href="https://www.instagram.com/texastechmensvb/?hl=en" target="_blank">
+            <img src="instagram-logo.PNG" alt="Instagram" class="social-icon">
+        </a>
+        <a href="https://www.facebook.com/profile.php?id=100063585411009&mibextid=LQQJ4d" target="_blank">
+            <img src="facebook-logo.PNG" alt="Facebook" class="social-icon">
+        </a>
+    </div>
+
     <h3>Watch Us On Youtube</h3>
-    <p>@texastechmensclubvolleyball</p>
-   
-
-
-
+    <div class="youtube-section">
+        <p>Check out highlights, full matches, and behind-the-scenes footage on our channel:</p>
+        <p><a class="youtube-link" href="https://www.youtube.com/@texastechmensclubvolleyball" target="_blank">Visit our YouTube Channel</a></p>
+    </div>
 
 </main>
 
