--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <h1 id="page-header">Texas Tech Men's Volleyball Club</h1>
     <div class="opening-image-container">
         <img src="ttu-campus.jpg" class="homepage-pic" alt="Texas Tech University and Recreation Center">
-        <a href="#info" class="learn-button">Learn More</a>
+        <a href="about.html" class="learn-button">Learn More</a>
     </div>
     <h2 id="purpose">Our purpose is to motivate and teach the game of volleyball. While doing so, keeping a competitive mindset with the intentions of improving every member and working as a team.</h2>
     
