--- a/support.html
+++ b/support.html
@@ -36,16 +36,18 @@
         <img src="nationals-25.jpg" alt="Campaign" class="fund-image">
     
         <div style="text-align: center;">
-          <a href="https://www.gofundme.com/f/YOUR_GOFUNDME_URL_HERE" target="_blank" class="donate-button">
+          <a href="https://www.gofundme.com/f/support-texas-tech-mens-volleyballs-journey-to-nationals" target="_blank" class="donate-button">
             Donate Now?
           </a>
         </div>
     
         <div class="fund-story">
           <h2>Our Story</h2>
-          <p>All donations go towards travel expenses, gear, and tournament fees. Those who would like to support the team can donate through the Texas Tech Men's Volleyball GoFundMe.</p>
-          <p>Thanks to all your donations, last year was the first time the TTU Men's Volleyball Club was able to send both an A and B team to Nationals in Arizona!</p> 
-          <p>With your help this upcoming season, the club aims to bring both teams back to nationals for another shot at the title!</p>
+          <p>We wanted to share some news that the Texas Tech Men’s Volleyball Club Teams are heading to Nationals in Phoenix, Arizona this year. Last year, for the first time ever, we were able to bring not just one team, but both our A & B teams to compete at Nationals.
+            We wouldn’t have made it to Nationals if it weren’t for all the generous donations last year. It would be an amazing experience to showcase our team's talent once again this upcoming spring!</p>
+            <p>However, in order to achieve this goal, we are in need of anyone's assistance. With our team's hard work and dedication, the costs to attend Nationals would include the following: participation fee, lodging, and transportation.<br>
+                Any amount of money is much appreciated and will help reach our goal to head to Nationals.</p><br>
+            <p>Thank you!!</p>
         </div>
     </div>
 </main>
