--- a/tryouts.html
+++ b/tryouts.html
@@ -31,7 +31,7 @@
         <div class="tryout-text-box">
             <h2 class="tryout-heading">Open to all men attending Texas Tech University!</h2>
             <p class="tryout-description">
-                The GOAL of the TTU Men's Volleyball Club is to grow the game of volleyball.<br><br>
+                The goal of the TTU Men's Volleyball Club is to grow the game of volleyball.<br><br>
                 The team is always open to new members wanting to sharpen their skills, play a competitive sport, or learn the basics!<br><br>
                 We keep a competitive mindset with the intentions of improving every member and working as a team.
             </p>
