--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 
 <body>
     <nav class="navbar">
-        <img src="vball-logo.PNG" alt="Double T Logo and Volleyball">
+        <img src="vball-logo2.PNG" alt="Double T Logo and Volleyball">
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="tryouts.html">Tryouts</a></li>
@@ -33,11 +33,10 @@
     </div>
 
     <h3>Our Story</h3>
-    <p class="story-text">The Texas Tech Men's Volleyball Club is a student organization that operaters through the University Recreation Sport Clubs Program. 
-        Our purpose is to motivate and teach the game of volleyball. While doing so, we keep a competitive mindset with the intentions of improving every member and working as a team.<br><br><br>
+    <p class="story-text">The Texas Tech Men's Volleyball Club is a student organization that operates through the University Recreation Sport Clubs Program. 
+        Our purpose is to motivate and teach the game of volleyball. While doing so, we keep a competitive mindset with the intention of improving every member and working as a team.<br><br>
         The goal of the TTU Men's Volleyball Club is to grow the game of volleyball.
-        The team is always open to new members wanting to sharpen their skills, play a competitive sport, or learn the basics!</p>   
-    
+        The team is always open to new members looking to sharpen their skills, compete at a high level, or learn the basics!</p>
         <div class="Bteam-banner">
         <img src="b-team-group.png" class="group-B-pic" alt="B Team group photo">
     </div>
