--- a/gallery.html
+++ b/gallery.html
@@ -9,7 +9,7 @@
 
 <body>
     <nav class="navbar">
-        <img src="vball-logo.PNG" alt="Double T Logo and Volleyball">
+        <img src="vball-logo2.PNG" alt="Double T Logo and Volleyball">
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="tryouts.html">Tryouts</a></li>
