--- a/schedules.html
+++ b/schedules.html
@@ -9,7 +9,7 @@
 
 <body>
     <nav class="navbar">
-        <img src="vball-logo.PNG" alt="Double T Logo and Volleyball">
+        <img src="vball-logo2.PNG" alt="Double T Logo and Volleyball">
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="tryouts.html">Tryouts</a></li>
@@ -39,21 +39,46 @@
             <h4>Fall Tryouts</h4>
             <p>August 27th & 29th 8:00pm-10:00pm<br>
             TTU Rec Center (Courts 7 & 8)</p>
-            <img src="fall-cutout.jpg" alt="Fall Tryout Schedule" class="tryout-date-img">
+            <img src="tryout-cutout.jpg" alt="Fall Tryout Schedule" class="tryout-date-img">
         </div>
         <div class="tryout-date-card">
             <h4>Spring Tryouts</h4>
             <p>January 21st & 23rd 8:00pm-10:00pm<br>
             TTU Rec Center (Courts 7 & 8)</p>
-            <img src="spring-cutout.jpg" alt="Spring Tryout Schedule" class="tryout-date-img">
+            <img src="tryout-cutout.jpg" alt="Spring Tryout Schedule" class="tryout-date-img">
         </div>
     </section>
     <a href="tryouts.html#Outlook" id="schedule-tryout-link">More Tryout Details</a>
 
-    <h3>Practice schedules</h3>
-    <p>usual practice dates, times, and expectations</p>
+    <h3>Practice Schedule</h3>
+    <section class="practice-schedule-container">
+        <div class="practice-card">
+            <h4>Fall Season</h4>
+            <p><b>Days:</b> Tuesday & Thursday</p>
+            <p><b>Time:</b> 8:00 PM - 10:00 PM</p>
+            <p><b>Location:</b> TTU Rec Center (Courts 7 & 8)</p>
+        </div>
+        <div class="practice-card">
+            <h4>Spring Season</h4>
+            <p><b>Days:</b> Tuesday, Thursday, & Sunday</p>
+            <p><b>Time:</b> 8:00 PM - 10:00 PM</p>
+            <p><b>Location:</b> TTU Rec Center (Courts 7 & 8)</p>
+        </div>
+    </section>
+    <p class="practice-note">Players must come prepared with athletic gear, hydration, and a competitive mindset.</p>
+
     <h3>Tournament and Season Schedules</h3>
-    <p>tounament deatils and season scedule/dates</p>
+    <div class="tournament container">
+        <p class="spring-tournament">Spring<br>Tournament</p>
+        <p class="schedule-2025">2025<br>Schedule</p>
+    </div>
+    <div class="tounry">
+        <p class="tourny-dates">Feburary 8th- SIVA Men's Kickoff (@UNT & Baylor)</p>
+        <p class="tourny-dates2">Feburary 23rd- SIVA Crossover (@Texas Image Volleyball)</p>
+        <p class="tourny-dates">March 22nd- SIVA Elite 8 *Qualifier* (@LSU)</p>
+        <p class="tourny-dates2">March 29th- SIVA Championships (@Legends Sports Complex)</p>
+        <p class="tourny-dates">April 16th-20th- NCVF Nationals (@Phoenix, AZ)</p>
+    </div>
 
 
 </main>
