--- a/tryouts.html
+++ b/tryouts.html
@@ -9,7 +9,7 @@
 
 <body>
     <nav class="navbar">
-        <img src="vball-logo.PNG" alt="Double T Logo and Volleyball">
+        <img src="vball-logo2.PNG" alt="Double T Logo and Volleyball">
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="tryouts.html">Tryouts</a></li>
@@ -32,16 +32,15 @@
             <h2 class="tryout-heading">Open to all men attending Texas Tech University!</h2>
             <p class="tryout-description">
                 The goal of the TTU Men's Volleyball Club is to grow the game of volleyball.<br><br>
-                The team is always open to new members wanting to sharpen their skills, play a competitive sport, or learn the basics!<br><br>
-                We keep a competitive mindset with the intentions of improving every member and working as a team.
-            </p>
+                The team is always open to new members looking to sharpen their skills, compete at a high level, or learn the basics!<br><br>
+                We maintain a competitive mindset with the intention of helping every member improve and work as a team.</p>
             <a href="" class="waiver2">Download Waiver</a>
             <a href="#Outlook" class="learn-more-button">Learn More</a>
         </div>
         <img src="open-gym.jpg" alt="Open Gym Flyer" class="tryout-image">
     </section>
 
-    <h3>Requirments</h3>
+    <h3>Requirements</h3>
     <div class="requirements-container">
     <h5>Players must have the following requirements to participate in club tryouts:</h5>
         <div class="requirement-boxes">
@@ -55,7 +54,7 @@
             </div>
             <div class="requirement-card">
                 <img src="money-clipart.PNG" alt="$5 Tryout Fee">
-                <p>5$ Tryout Fee</p>
+                <p>$5 Tryout Fee</p>
             </div>
         </div>
         <h5>Recommended items for tryouts include:</h5>
@@ -92,7 +91,7 @@
 
     <h3>Location</h3>
     <p class="location-description">
-    Located on the main floor of the University Rec Center, <strong>"Court 7 & 8"</strong>. Head towards the main gym, through the basketball courts, to the last volleyball net against the wall.
+    Located on the main floor of the University Rec Center, <strong>"Courts 7 & 8"</strong>. Head towards the main gym, through the basketball courts, to the last volleyball net against the wall.
     </p>
     <p class="image-disclaimer">*Image taken above designated court*</p>
     <div class="location-display">
@@ -111,15 +110,15 @@
     <h3 id="info">General Information</h3>
     <div class="info-box-container">
         <div class="info-box">
-            <p>Club activities are held year round, but participants must tryout on the specified dates and times before being placed on a team or joining practices.<br><br> $5 Fee REQUIRED to Tryout.</p>
+            <p>Club activities are held year round, but participants must tryout on the specified dates and times before being placed on a team or joining practices.<br><br> $5 Fee REQUIRED to tryout.</p>
         </div>
         <div class="info-box">
-        <p>The Texas Tech Men's Volleyball Club requires a "$300" deposit to cover team cost and uniforms. Said deposit is only required once a player is designated to a roster position, and can be refunded if the player decides not to play for the Club before the first tournament.</p>
+        <p>The Texas Tech Men's Volleyball Club requires a "$300" deposit to cover team costs and uniforms. Said deposit is only required once a player is designated to a roster position, and can be refunded if the player decides not to play for the Club before the first tournament.</p>
         </div>
         <div class="info-box">
-            <p>The following are links to the waivers and forms required to try-out:</p>
+            <p>The following are links to the waivers and forms required to tryout:</p>
             <a href="" class="waiver">Tryout Waiver</a><br>
-            <p>Players will need to bring the Waiver and Emergency Contact Form with them in order to participate at Try-outs/Evaluations/Team Placement</p>
+            <p>Players will need to bring the Waiver and Emergency Contact Form with them in order to participate at Tryouts/Evaluations/Team Placement</p>
         </div>
     </div>
 
