--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
 
 <body>
     <nav class="navbar">
-        <img src="vball-logo.PNG" alt="Double T Logo and Volleyball">
+        <img src="vball-logo2.PNG" alt="Double T Logo and Volleyball">
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="tryouts.html">Tryouts</a></li>
@@ -27,12 +27,30 @@
 
 <main>
     <h1 id="page-header">Contact Us</h1>
-    <h3>Reach Out To Club Officals</h3>
-    <p>To connect with a club representative email: @urec.mensvolleyballclub@ttu.edu</p>
-    <h3>Find Us On Youtube & Instagram</h3>
-    <p>@texastechmensclubvolleyball</p>
-    <p>https://www.facebook.com/profile.php?id=100063585411009&mibextid=LQQJ4d</p>
+    <div class="soap-image-container">
+        <img src="soapsuds.JPG" class="SoapSuds" alt="SoapSuds statue in a field of roses">
+        <a href="mailto:urec.mensvolleyballclub@ttu.edu" class="connect-button">Connect</a>
+    </div>
+    
+    <h3>Reach Out To Club Officials</h3>
+    <p>To connect with a club official email: averhage@ttu.edu</p>
+    <p>To connect with a 'UREC' club representative email: urec.mensvolleyballclub@ttu.edu</p>
+    
+    <h3>Connect With Us On Social Media</h3>
+    <div class="social-media-section">
+        <a href="https://www.instagram.com/texastechmensvb/?hl=en" target="_blank">
+            <img src="instagram-logo.PNG" alt="Instagram" class="social-icon">
+        </a>
+        <a href="https://www.facebook.com/profile.php?id=100063585411009&mibextid=LQQJ4d" target="_blank">
+            <img src="facebook-logo.PNG" alt="Facebook" class="social-icon">
+        </a>
+    </div>
 
+    <h3>Watch Us On Youtube</h3>
+    <div class="youtube-section">
+        <p>Check out highlights, full matches, and behind-the-scenes footage on our channel:</p>
+        <p><a class="youtube-link" href="https://www.youtube.com/@texastechmensclubvolleyball" target="_blank">Visit our YouTube Channel</a></p>
+    </div>
 
 
 
