--- a/about.html
+++ b/about.html
@@ -52,10 +52,16 @@
     </div>
 
     <h3>Watch Us On Youtube</h3>
+    <h4 class="youtube-text">Check out highlights, full matches, and behind-the-scenes footage on our channel:</h4>
     <div class="youtube-section">
-        <p>Check out highlights, full matches, and behind-the-scenes footage on our channel:</p>
-        <p><a class="youtube-link" href="https://www.youtube.com/@texastechmensclubvolleyball" target="_blank">Visit our YouTube Channel</a></p>
+        <div class="youtube-logo">
+            <p class="click-here-text">Click Below</p>
+            <a href="https://www.youtube.com/@texastechmensclubvolleyball" target="_blank">
+                <img src="youtube-logo.PNG" alt="YouTube" class="social-icon">
+            </a>
+        </div>
     </div>
+
 
 </main>
 
