--- a/tryouts.html
+++ b/tryouts.html
@@ -41,53 +41,68 @@
     </section>
 
     <h3>Requirements</h3>
-    <div class="requirements-container">
-    <h5>Players must have the following requirements to participate in club tryouts:</h5>
-        <div class="requirement-boxes">
-            <div class="requirement-card">
-                <img src="shoe-clipart.PNG" alt="Athletic Shoes">
-                <p>Athletic Shoes (recommend basketball shoes or Asics)</p>
+<div class="requirement-wrapper">
+    <div class="requirements-flex-container">
+        <div class="requirements-container">
+            <h5>Players must have the following requirements to participate in club tryouts:</h5>
+            <div class="requirement-boxes">
+                <div class="requirement-card">
+                    <img src="shoe-clipart.PNG" alt="Athletic Shoes">
+                    <p>Athletic Shoes (recommend basketball shoes or Asics)</p>
+                </div>
+                <div class="requirement-card">
+                    <img src="waiver-clipart.PNG" alt="Waiver">
+                    <a href="" class="requirement-link">Signed Waiver Form</a>
+                </div>
+                <div class="requirement-card">
+                    <img src="money-clipart.PNG" alt="$5 Tryout Fee">
+                    <p>$5 Tryout Fee</p>
+                </div>
             </div>
-            <div class="requirement-card">
-                <img src="waiver-clipart.PNG" alt="Waiver">
-            <a href="" class="requirement-link">Signed Waiver Form</a>
-            </div>
-            <div class="requirement-card">
-                <img src="money-clipart.PNG" alt="$5 Tryout Fee">
-                <p>$5 Tryout Fee</p>
+
+            <h5>Recommended items for tryouts include:</h5>
+            <div class="requirement-boxes">
+                <div class="requirement-card">
+                    <img src="water-clipart.PNG" alt="Water">
+                    <p>Bring Water (limited fountains near court)</p>
+                </div>
+                <div class="requirement-card">
+                    <img src="watch-clipart.PNG" alt="Remove Jewelry">
+                    <p>Remove Jewelry or Watches</p>
+                </div>
+                <div class="requirement-card">
+                    <img src="stretch-clipart.PNG" alt="Stretching">
+                    <p>Stretch before & after playing</p>
+                </div>
             </div>
         </div>
-        <h5>Recommended items for tryouts include:</h5>
-        <div class="requirement-boxes">
-            <div class="requirement-card">
-                <img src="water-clipart.PNG" alt="Water">
-                <p>Bring Water (limited fountains near court)</p>
-            </div>
-            <div class="requirement-card">
-                <img src="watch-clipart.PNG" alt="Remove Jewelry">
-                <p>Remove Jewelry or Watches</p>
-            </div>
-            <div class="requirement-card">
-                <img src="stretch-clipart.PNG" alt="Stretching">
-                <p>Stretch before & after playing</p>
-            </div>
+
+        <div class="requirement-img-container">
+            <img src="b&w-player.JPG" class="requirement-image" alt="Club Player in Black & White">
         </div>
-    </div>    
+    </div>
+</div>
+
 
     <h3 id="Outlook">Details & Outline</h3>
-    <section class="tryout-dates-container">
-    <div class="tryout-date-card">
-        <h4>Fall Tryouts</h4>
-        <p>August 27th & 29th 8:00pm-10:00pm</p>
-        <img src="fall-tryout.jpg" alt="Fall Tryout Outlook" class="tryout-date-img">
+    <div class="tryout-background-wrapper">
+        <img src="wavy-background.jpg" alt="Wavy Background" class="wavy-background">
+
+        <section class="tryout-dates-container">
+            <div class="tryout-date-card">
+                <h4>Fall Tryouts</h4>
+                <p>August 27th & 29th 8:00pm-10:00pm</p>
+                <img src="fall-tryout.jpg" alt="Fall Tryout Outlook" class="tryout-date-img">
+            </div>
+            <div class="tryout-date-card">
+                <h4>Spring Tryouts</h4>
+                <p>January 21st & 23rd 8:00pm-10:00pm</p>
+                <img src="spring-tryout.jpg" alt="Spring Tryout Outlook" class="tryout-date-img">
+            </div>
+        </section>
+
+        <a href="schedules.html#sched-tryout-heading" id="schedule-tryout-link">More Scheduling Details</a>
     </div>
-    <div class="tryout-date-card">
-        <h4>Spring Tryouts</h4>
-        <p>January 21st & 23rd 8:00pm-10:00pm</p>
-        <img src="spring-tryout.jpg" alt="Spring Tryout Outlook" class="tryout-date-img">
-    </div>
-    </section>
-    <a href="schedules.html#sched-tryout-heading" id="schedule-tryout-link">More Scheduling Details</a>
 
     <h3>Location</h3>
     <p class="location-description">
