--- a/contact.html
+++ b/contact.html
@@ -33,11 +33,27 @@
     </div>
     
     <h3>Reach Out To Club Officials</h3>
-    <p>To connect with a club official email: averhage@ttu.edu</p>
-    <p>To connect with a 'UREC' club representative email: urec.mensvolleyballclub@ttu.edu</p>
+    <div class="contact-section">
+        <div class="contact-box-container">
+            <div class="contact-box">
+                <h4>President Contact</h4>
+                <img src="Andrew.jpg" alt="President, Andrew VerHagen">
+                <p>Email: <a href="mailto:averhage@ttu.edu">averhage@ttu.edu</a></p>
+            </div>
+            <div class="contact-box">
+                <h4>UREC Representative</h4>
+                <img src="UREC-logo.PNG" alt="UREC Logo">
+                <p>Email: <a href="mailto:urec.mensvolleyballclub@ttu.edu">urec.mensvolleyballclub@ttu.edu</a></p>
+            </div>
+        </div>
     
+        <div class="contact-image-wrapper">
+            <img src="mail-icon.PNG" class="contact-side-image" alt="Mail Clipart" >
+        </div>
+    </div>
+
     <h3>Connect With Us On Social Media</h3>
-    <div class="social-media-section">
+    <div class="social-media-section"> 
         <a href="https://www.instagram.com/texastechmensvb/?hl=en" target="_blank">
             <img src="instagram-logo.PNG" alt="Instagram" class="social-icon">
         </a>
@@ -47,9 +63,14 @@
     </div>
 
     <h3>Watch Us On Youtube</h3>
+    <h4 class="youtube-text">Check out highlights, full matches, and behind-the-scenes footage on our channel:</h4>
     <div class="youtube-section">
-        <p>Check out highlights, full matches, and behind-the-scenes footage on our channel:</p>
-        <p><a class="youtube-link" href="https://www.youtube.com/@texastechmensclubvolleyball" target="_blank">Visit our YouTube Channel</a></p>
+        <div class="youtube-logo">
+            <p class="click-here-text">Click Below</p>
+            <a href="https://www.youtube.com/@texastechmensclubvolleyball" target="_blank">
+                <img src="youtube-logo.PNG" alt="YouTube" class="social-icon">
+            </a>
+        </div>
     </div>
 
 
