--- a/index.html
+++ b/index.html
@@ -61,22 +61,8 @@
           <div class="job-title">Safety Officer</div>
         </div>
     </div>
-
-    <h3 id="News-heading">News and Updates</h3>
-    <div class="news-section">
-        <section class="bulletin">
-            <p>No Upcoming Events</p>
-            <a href="https://events.ttu.edu/" target="_blank" class="bulletin-link">Discover More Events</a>
-        </section>
-    
-        <div class="roster-heading">
-            <h5 id="roster-updates">Official Roster Updates</h5>
-            <span class="roster-date">1/31/2025</span>
-        </div>
-        <div class="roster-container">
-            <img src="a-team-roster.jpg" class="roster-image" alt="A Team Roster">
-            <img src="b-team-roster.jpg" class="roster-image" alt="B Team Roster">
-        </div>
+    <div class="about-button-container">
+        <a href="contact.html" class="about-button">Contact</a>
     </div>
 
     <h3 id="info">General Information</h3>
@@ -95,7 +81,24 @@
             <p>Players will need to bring the Waiver and Emergency Contact Form with them in order to participate at Tryouts/Evaluations/Team Placement</p>
         </div>
     </div>
+
+    <h3 id="News-heading">News and Updates</h3>
+    <div class="news-section">
+        <section class="bulletin">
+            <p>No Upcoming Events</p>
+            <a href="https://events.ttu.edu/" target="_blank" class="bulletin-link">Discover More Events</a>
+        </section>
     
+        <div class="roster-heading">
+            <h5 id="roster-updates">Official Roster Updates</h5>
+            <span class="roster-date">1/31/2025</span>
+        </div>
+        <div class="roster-container">
+            <img src="a-team-roster.jpg" class="roster-image" alt="A Team Roster">
+            <img src="b-team-roster.jpg" class="roster-image" alt="B Team Roster">
+        </div>
+    </div>
+
     <div class="map-container">
         <iframe 
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d657.4213133193606!2d-101.8773324!3d33.5842389!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x86fe12c08b3f84cb%3A0x6b4d4c7d88ffb40b!2s3219%20Main%20St%2C%20Lubbock%2C%20TX%2079409!5e0!3m2!1sen!2sus!4v1712857829195!5m2!1sen!2sus" 
