--- a/schedules.html
+++ b/schedules.html
@@ -34,21 +34,24 @@
     </div>
     
     <h3 id="sched-tryout-heading">Tryout Schedules</h3>
-    <section class="tryout-dates-container">
-        <div class="tryout-date-card">
-            <h4>Fall Tryouts</h4>
-            <p>August 27th & 29th 8:00pm-10:00pm<br>
-            TTU Rec Center (Courts 7 & 8)</p>
-            <img src="tryout-cutout.jpg" alt="Fall Tryout Schedule" class="tryout-date-img">
-        </div>
-        <div class="tryout-date-card">
-            <h4>Spring Tryouts</h4>
-            <p>January 21st & 23rd 8:00pm-10:00pm<br>
-            TTU Rec Center (Courts 7 & 8)</p>
-            <img src="tryout-cutout.jpg" alt="Spring Tryout Schedule" class="tryout-date-img">
-        </div>
-    </section>
-    <a href="tryouts.html#Outlook" id="schedule-tryout-link">More Tryout Details</a>
+    <div class="tryout-background-wrapper">
+        <img src="wavy-background.jpg" alt="Wavy Background" class="wavy-background">
+        <section class="tryout-dates-container">
+            <div class="tryout-date-card">
+                <h4>Fall Tryouts</h4>
+                <p>August 27th & 29th 8:00pm-10:00pm<br>
+                TTU Rec Center (Courts 7 & 8)</p>
+                <img src="tryout-cutout.jpg" alt="Fall Tryout Schedule" class="tryout-date-img">
+            </div>
+            <div class="tryout-date-card">
+                <h4>Spring Tryouts</h4>
+                <p>January 21st & 23rd 8:00pm-10:00pm<br>
+                TTU Rec Center (Courts 7 & 8)</p>
+                <img src="tryout-cutout.jpg" alt="Spring Tryout Schedule" class="tryout-date-img">
+            </div>
+        </section>
+        <a href="tryouts.html#Outlook" id="schedule-tryout-link">More Tryout Details</a>
+    </div>
 
     <h3>Practice Schedule</h3>
     <section class="practice-schedule-container">
