--- a/gallery.html
+++ b/gallery.html
@@ -27,7 +27,29 @@
 
 <main>
     <h1 id="page-header">Gallery</h1>
-    
+    <section class="gallery-container">
+        <div class="gallery-grid">
+            <img src="cowboy5-group.JPG" alt="Group Photo">
+            <img src="a-team-away.JPG" alt="A Team Tournament Photo">
+            <img src="setting.JPG" alt="Setting in action">
+            <img src="halloween.JPG" alt="Halloween Practice">
+            <img src="b-team-away.JPG" alt="B Team Tournament Photo">
+            <img src="girls-vs-boys.JPG" alt="Girls vs Boys Group Photo"> 
+            <img src="8ball-toss.JPG" alt="Athlete Photo #8">
+            <img src="serving.JPG" alt="Serving in action">
+            <img src="philanthropy.JPG" alt="Philanthropy Outreach Group Photo">
+            <img src="hitting.JPG" alt="Hitting in action">
+            <img src="cowboy3-group.JPG" alt="Group Photo">
+            <img src="passing.JPG" alt="Passing in action">
+            <img src="a-team-group2.JPG" alt="A Team Group Photo">
+            <img src="hitting2.JPG" alt="Hitting in action">
+            <img src="b-team-group-2.JPG" alt="B Team Group Photo">
+            <img src="17ball-toss.JPG" alt="Athlete Photo #17">
+            <img src="b&w-player.JPG" alt="Athlete Photo">
+            <img src="handstand.JPG" alt="Athlete Photo #8">
+
+        </div>
+    </section>
 
 
 
