--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <h2 id="purpose">Our purpose is to motivate and teach the game of volleyball. While doing so, keeping a competitive mindset with the intention of improving every member and working as a team.</h2>
     
     <h3 id="leaders">Meet Our Leadership Team</h3>
+<div class="leadership-section"> 
     <div class="profile-container">
         <div class="profile-card">
           <img src="Andrew.jpg" alt="Profile 1" class="profile-pic">
@@ -64,6 +65,7 @@
     <div class="about-button-container">
         <a href="contact.html" class="about-button">Contact</a>
     </div>
+</div> 
 
     <h3 id="info">General Information</h3>
     <h2 class="info-disclaimer">We encourage players to make informed decisions about the commitment of the club before paying the deposit.<br>
