--- a/schedules.html
+++ b/schedules.html
@@ -14,7 +14,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="tryouts.html">Tryouts</a></li>
             <li><a href="schedules.html">Schedules</a></li>
-            <li><a href="about.html">About Us</a></li>
+            <li><a href="about.html">About</a></li>
             <li><a href="">More</a>
                 <ul class="dropdown">
                     <li><a href="support.html">Donate</a></li>
