--- a/tryouts.html
+++ b/tryouts.html
@@ -48,7 +48,7 @@
             <div class="requirement-boxes">
                 <div class="requirement-card">
                     <img src="shoe-clipart.PNG" alt="Athletic Shoes">
-                    <p>Athletic Shoes (recommend basketball shoes or Asics)</p>
+                    <p>Athletic Shoes (recommend basketball shoes or ASICS)</p>
                 </div>
                 <div class="requirement-card">
                     <img src="waiver-clipart.PNG" alt="Waiver">
