--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </div>
         <div class="info-box">
             <p>The following are links to the waivers and forms required to tryout:</p>
-            <a href="" class="waiver">Tryout Waiver</a><br>
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSdqFzgqR48X59Kokj4BarJ7e9DHMpE7OZRjl4pkVtzEFP5_7w/viewform?pli=1" class="waiver">Tryout Waiver</a><br>
             <p>Players will need to bring the Waiver and Emergency Contact Form with them in order to participate at Tryouts/Evaluations/Team Placement</p>
         </div>
     </div>
