--- a/tryouts.html
+++ b/tryouts.html
@@ -34,7 +34,7 @@
                 The goal of the TTU Men's Volleyball Club is to grow the game of volleyball.<br><br>
                 The team is always open to new members looking to sharpen their skills, compete at a high level, or learn the basics!<br><br>
                 We maintain a competitive mindset with the intention of helping every member improve and work as a team.</p>
-            <a href="" class="waiver2">Download Waiver</a>
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSdqFzgqR48X59Kokj4BarJ7e9DHMpE7OZRjl4pkVtzEFP5_7w/viewform?pli=1" class="waiver2">Download Waiver</a>
             <a href="#Outlook" class="learn-more-button">Learn More</a>
         </div>
         <img src="open-gym.jpg" alt="Open Gym Flyer" class="tryout-image">
@@ -52,7 +52,7 @@
                 </div>
                 <div class="requirement-card">
                     <img src="waiver-clipart.PNG" alt="Waiver">
-                    <a href="" class="requirement-link">Signed Waiver Form</a>
+                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSdqFzgqR48X59Kokj4BarJ7e9DHMpE7OZRjl4pkVtzEFP5_7w/viewform?pli=1" class="requirement-link">Signed Waiver Form</a>
                 </div>
                 <div class="requirement-card">
                     <img src="money-clipart.PNG" alt="$5 Tryout Fee">
@@ -132,7 +132,7 @@
         </div>
         <div class="info-box">
             <p>The following are links to the waivers and forms required to tryout:</p>
-            <a href="" class="waiver">Tryout Waiver</a><br>
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSdqFzgqR48X59Kokj4BarJ7e9DHMpE7OZRjl4pkVtzEFP5_7w/viewform?pli=1" class="waiver">Tryout Waiver</a><br>
             <p>Players will need to bring the Waiver and Emergency Contact Form with them in order to participate at Tryouts/Evaluations/Team Placement</p>
         </div>
     </div>
